# testicle

./: README.md
src/: CMakeLists.txt  smol_test.cpp  smol_test.h
src/sample/: float_tests.cpp  general_tests.cpp  slow_tests.cpp
